borsh-derive/src/internals/schema/structs/snapshots/generic_named_fields_struct_borsh_skip.snap
---
source: borsh-derive/src/internals/schema/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V, U> borsh::BorshSchema for G<K, V, U>
where
    U: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![< U > ::declaration()];
        format!(r#"{}<{}>"#, "G", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::NamedFields(
            borsh::__private::maybestd::vec![
                ("y".to_string(), < U as borsh::BorshSchema > ::declaration())
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions.get(&Self::declaration()).is_none();
        borsh::schema::add_definition(Self::declaration(), definition, definitions);
        if no_recursion_flag {
            <U as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}

