borsh-derive/src/internals/schema/structs/snapshots/unit_struct.snap
---
source: borsh-derive/src/internals/schema/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::BorshSchema for A {
    fn declaration() -> borsh::schema::Declaration {
        "A".to_string()
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::Empty;
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions.get(&Self::declaration()).is_none();
        borsh::schema::add_definition(Self::declaration(), definition, definitions);
        if no_recursion_flag {}
    }
}

